re PR c++/33094 (ICE on valid C++ virtual template static member in anonymous namespace)

PR c++/33094
        * decl.c (make_rtl_for_nonlocal_decl): It's ok for a member
        constant to not have DECL_EXTERNAL if it's file-local.

From-SVN: r128890